Assign 3/FUll/y.output
Terminals unused in grammar

   CHAR
   CONST_CHAR
   MAIN
   '+'
   '-'
   '*'
   '%'


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID lparen2 parameter_list2 RPAREN SEMICOLON

    8 func_definition: type_specifier ID lparen2 parameter_list2 RPAREN compound_statement

    9 lparen2: LPAREN

   10 parameter_list2: parameter_list
   11                | %empty

   12 parameter_list: parameter_list COMMA type_specifier ID
   13               | type_specifier ID

   14 compound_statement: LCURL statements RCURL
   15                   | LCURL RCURL

   16 var_declaration: type_specifier declaration_list SEMICOLON

   17 type_specifier: INT
   18               | FLOAT
   19               | VOID

   20 declaration_list: declaration_list COMMA ID
   21                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   22                 | ID
   23                 | ID LTHIRD CONST_INT RTHIRD

   24 statements: statement
   25           | statements statement

   26 statement: var_declaration
   27          | expression_statement
   28          | compound_statement
   29          | FOR lparen2 expression_statement expression_statement expression RPAREN statement
   30          | IF lparen2 expression RPAREN statement
   31          | IF lparen2 expression RPAREN statement ELSE statement
   32          | WHILE lparen2 expression RPAREN statement
   33          | PRINTLN LPAREN ID RPAREN SEMICOLON
   34          | RETURN expression SEMICOLON

   35 expression_statement: SEMICOLON
   36                     | expression SEMICOLON

   37 variable: ID
   38         | ID LTHIRD expression RTHIRD

   39 expression: logic_expression
   40           | variable ASSIGNOP logic_expression

   41 logic_expression: rel_expression
   42                 | rel_expression LOGICOP rel_expression

   43 rel_expression: simple_expression
   44               | simple_expression RELOP simple_expression

   45 simple_expression: term
   46                  | simple_expression ADDOP term

   47 term: unary_expression
   48     | term MULOP unary_expression

   49 unary_expression: ADDOP unary_expression
   50                 | NOT unary_expression
   51                 | factor

   52 factor: variable
   53       | ID LPAREN argument_list RPAREN
   54       | LPAREN expression RPAREN
   55       | CONST_INT
   56       | CONST_FLOAT
   57       | variable INCOP
   58       | variable DECOP

   59 argument_list: arguments
   60              | %empty

   61 arguments: arguments COMMA logic_expression
   62          | logic_expression


Terminals, with rules where they appear

$end (0) 0
'%' (37)
'*' (42)
'+' (43)
'-' (45)
error (256)
IF (258) 30 31
ELSE (259) 31
FOR (260) 29
INT (261) 17
CHAR (262)
WHILE (263) 32
FLOAT (264) 18
VOID (265) 19
RETURN (266) 34
PRINTLN (267) 33
ID (268) 7 8 12 13 20 21 22 23 33 37 38 53
ADDOP (269) 46 49
MULOP (270) 48
INCOP (271) 57
DECOP (272) 58
RELOP (273) 44
NOT (274) 50
LPAREN (275) 9 33 53 54
RPAREN (276) 7 8 29 30 31 32 33 53 54
LCURL (277) 14 15
RCURL (278) 14 15
LTHIRD (279) 21 23 38
RTHIRD (280) 21 23 38
COMMA (281) 12 20 21 61
SEMICOLON (282) 7 16 33 34 35 36
ASSIGNOP (283) 40
CONST_CHAR (284)
CONST_INT (285) 21 23 55
CONST_FLOAT (286) 56
LOGICOP (287) 42
MAIN (288)
noelse (289)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
start (40)
    on left: 1, on right: 0
program (41)
    on left: 2 3, on right: 1 2
unit (42)
    on left: 4 5 6, on right: 2 3
func_declaration (43)
    on left: 7, on right: 5
func_definition (44)
    on left: 8, on right: 6
lparen2 (45)
    on left: 9, on right: 7 8 29 30 31 32
parameter_list2 (46)
    on left: 10 11, on right: 7 8
parameter_list (47)
    on left: 12 13, on right: 10 12
compound_statement (48)
    on left: 14 15, on right: 8 28
var_declaration (49)
    on left: 16, on right: 4 26
type_specifier (50)
    on left: 17 18 19, on right: 7 8 12 13 16
declaration_list (51)
    on left: 20 21 22 23, on right: 16 20 21
statements (52)
    on left: 24 25, on right: 14 25
statement (53)
    on left: 26 27 28 29 30 31 32 33 34, on right: 24 25 29 30 31 32
expression_statement (54)
    on left: 35 36, on right: 27 29
variable (55)
    on left: 37 38, on right: 40 52 57 58
expression (56)
    on left: 39 40, on right: 29 30 31 32 34 36 38 54
logic_expression (57)
    on left: 41 42, on right: 39 40 61 62
rel_expression (58)
    on left: 43 44, on right: 41 42
simple_expression (59)
    on left: 45 46, on right: 43 44 46
term (60)
    on left: 47 48, on right: 45 46 48
unary_expression (61)
    on left: 49 50 51, on right: 47 48 49 50
factor (62)
    on left: 52 53 54 55 56 57 58, on right: 51
argument_list (63)
    on left: 59 60, on right: 53
arguments (64)
    on left: 61 62, on right: 59 61


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   17 type_specifier: INT .

    $default  reduce using rule 17 (type_specifier)


State 2

   18 type_specifier: FLOAT .

    $default  reduce using rule 18 (type_specifier)


State 3

   19 type_specifier: VOID .

    $default  reduce using rule 19 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 11


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration .

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition .

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier . ID lparen2 parameter_list2 RPAREN SEMICOLON
    8 func_definition: type_specifier . ID lparen2 parameter_list2 RPAREN compound_statement
   16 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID . lparen2 parameter_list2 RPAREN SEMICOLON
    8 func_definition: type_specifier ID . lparen2 parameter_list2 RPAREN compound_statement
   22 declaration_list: ID .
   23                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 22 (declaration_list)

    lparen2  go to state 17


State 14

   16 var_declaration: type_specifier declaration_list . SEMICOLON
   20 declaration_list: declaration_list . COMMA ID
   21                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 18
    SEMICOLON  shift, and go to state 19


State 15

    9 lparen2: LPAREN .

    $default  reduce using rule 9 (lparen2)


State 16

   23 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 20


State 17

    7 func_declaration: type_specifier ID lparen2 . parameter_list2 RPAREN SEMICOLON
    8 func_definition: type_specifier ID lparen2 . parameter_list2 RPAREN compound_statement

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 11 (parameter_list2)

    parameter_list2  go to state 21
    parameter_list   go to state 22
    type_specifier   go to state 23


State 18

   20 declaration_list: declaration_list COMMA . ID
   21                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 24


State 19

   16 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 16 (var_declaration)


State 20

   23 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 25


State 21

    7 func_declaration: type_specifier ID lparen2 parameter_list2 . RPAREN SEMICOLON
    8 func_definition: type_specifier ID lparen2 parameter_list2 . RPAREN compound_statement

    RPAREN  shift, and go to state 26


State 22

   10 parameter_list2: parameter_list .
   12 parameter_list: parameter_list . COMMA type_specifier ID

    COMMA  shift, and go to state 27

    $default  reduce using rule 10 (parameter_list2)


State 23

   13 parameter_list: type_specifier . ID

    ID  shift, and go to state 28


State 24

   20 declaration_list: declaration_list COMMA ID .
   21                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 20 (declaration_list)


State 25

   23 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 23 (declaration_list)


State 26

    7 func_declaration: type_specifier ID lparen2 parameter_list2 RPAREN . SEMICOLON
    8 func_definition: type_specifier ID lparen2 parameter_list2 RPAREN . compound_statement

    LCURL      shift, and go to state 30
    SEMICOLON  shift, and go to state 31

    compound_statement  go to state 32


State 27

   12 parameter_list: parameter_list COMMA . type_specifier ID

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 33


State 28

   13 parameter_list: type_specifier ID .

    $default  reduce using rule 13 (parameter_list)


State 29

   21 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 34


State 30

   14 compound_statement: LCURL . statements RCURL
   15                   | LCURL . RCURL

    IF           shift, and go to state 35
    FOR          shift, and go to state 36
    INT          shift, and go to state 1
    WHILE        shift, and go to state 37
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 38
    PRINTLN      shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 44
    SEMICOLON    shift, and go to state 45
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 50
    statements            go to state 51
    statement             go to state 52
    expression_statement  go to state 53
    variable              go to state 54
    expression            go to state 55
    logic_expression      go to state 56
    rel_expression        go to state 57
    simple_expression     go to state 58
    term                  go to state 59
    unary_expression      go to state 60
    factor                go to state 61


State 31

    7 func_declaration: type_specifier ID lparen2 parameter_list2 RPAREN SEMICOLON .

    $default  reduce using rule 7 (func_declaration)


State 32

    8 func_definition: type_specifier ID lparen2 parameter_list2 RPAREN compound_statement .

    $default  reduce using rule 8 (func_definition)


State 33

   12 parameter_list: parameter_list COMMA type_specifier . ID

    ID  shift, and go to state 62


State 34

   21 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 63


State 35

   30 statement: IF . lparen2 expression RPAREN statement
   31          | IF . lparen2 expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 15

    lparen2  go to state 64


State 36

   29 statement: FOR . lparen2 expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 15

    lparen2  go to state 65


State 37

   32 statement: WHILE . lparen2 expression RPAREN statement

    LPAREN  shift, and go to state 15

    lparen2  go to state 66


State 38

   34 statement: RETURN . expression SEMICOLON

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable           go to state 54
    expression         go to state 67
    logic_expression   go to state 56
    rel_expression     go to state 57
    simple_expression  go to state 58
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61


State 39

   33 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 68


State 40

   37 variable: ID .
   38         | ID . LTHIRD expression RTHIRD
   53 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 69
    LTHIRD  shift, and go to state 70

    $default  reduce using rule 37 (variable)


State 41

   49 unary_expression: ADDOP . unary_expression

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable          go to state 71
    unary_expression  go to state 72
    factor            go to state 61


State 42

   50 unary_expression: NOT . unary_expression

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable          go to state 71
    unary_expression  go to state 73
    factor            go to state 61


State 43

   54 factor: LPAREN . expression RPAREN

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable           go to state 54
    expression         go to state 74
    logic_expression   go to state 56
    rel_expression     go to state 57
    simple_expression  go to state 58
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61


State 44

   15 compound_statement: LCURL RCURL .

    $default  reduce using rule 15 (compound_statement)


State 45

   35 expression_statement: SEMICOLON .

    $default  reduce using rule 35 (expression_statement)


State 46

   55 factor: CONST_INT .

    $default  reduce using rule 55 (factor)


State 47

   56 factor: CONST_FLOAT .

    $default  reduce using rule 56 (factor)


State 48

   28 statement: compound_statement .

    $default  reduce using rule 28 (statement)


State 49

   26 statement: var_declaration .

    $default  reduce using rule 26 (statement)


State 50

   16 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 75

    declaration_list  go to state 14


State 51

   14 compound_statement: LCURL statements . RCURL
   25 statements: statements . statement

    IF           shift, and go to state 35
    FOR          shift, and go to state 36
    INT          shift, and go to state 1
    WHILE        shift, and go to state 37
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 38
    PRINTLN      shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 76
    SEMICOLON    shift, and go to state 45
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 50
    statement             go to state 77
    expression_statement  go to state 53
    variable              go to state 54
    expression            go to state 55
    logic_expression      go to state 56
    rel_expression        go to state 57
    simple_expression     go to state 58
    term                  go to state 59
    unary_expression      go to state 60
    factor                go to state 61


State 52

   24 statements: statement .

    $default  reduce using rule 24 (statements)


State 53

   27 statement: expression_statement .

    $default  reduce using rule 27 (statement)


State 54

   40 expression: variable . ASSIGNOP logic_expression
   52 factor: variable .
   57       | variable . INCOP
   58       | variable . DECOP

    INCOP     shift, and go to state 78
    DECOP     shift, and go to state 79
    ASSIGNOP  shift, and go to state 80

    $default  reduce using rule 52 (factor)


State 55

   36 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 81


State 56

   39 expression: logic_expression .

    $default  reduce using rule 39 (expression)


State 57

   41 logic_expression: rel_expression .
   42                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 82

    $default  reduce using rule 41 (logic_expression)


State 58

   43 rel_expression: simple_expression .
   44               | simple_expression . RELOP simple_expression
   46 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 83
    RELOP  shift, and go to state 84

    $default  reduce using rule 43 (rel_expression)


State 59

   45 simple_expression: term .
   48 term: term . MULOP unary_expression

    MULOP  shift, and go to state 85

    $default  reduce using rule 45 (simple_expression)


State 60

   47 term: unary_expression .

    $default  reduce using rule 47 (term)


State 61

   51 unary_expression: factor .

    $default  reduce using rule 51 (unary_expression)


State 62

   12 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 12 (parameter_list)


State 63

   21 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 21 (declaration_list)


State 64

   30 statement: IF lparen2 . expression RPAREN statement
   31          | IF lparen2 . expression RPAREN statement ELSE statement

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable           go to state 54
    expression         go to state 86
    logic_expression   go to state 56
    rel_expression     go to state 57
    simple_expression  go to state 58
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61


State 65

   29 statement: FOR lparen2 . expression_statement expression_statement expression RPAREN statement

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    SEMICOLON    shift, and go to state 45
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    expression_statement  go to state 87
    variable              go to state 54
    expression            go to state 55
    logic_expression      go to state 56
    rel_expression        go to state 57
    simple_expression     go to state 58
    term                  go to state 59
    unary_expression      go to state 60
    factor                go to state 61


State 66

   32 statement: WHILE lparen2 . expression RPAREN statement

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable           go to state 54
    expression         go to state 88
    logic_expression   go to state 56
    rel_expression     go to state 57
    simple_expression  go to state 58
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61


State 67

   34 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 89


State 68

   33 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 90


State 69

   53 factor: ID LPAREN . argument_list RPAREN

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    $default  reduce using rule 60 (argument_list)

    variable           go to state 71
    logic_expression   go to state 91
    rel_expression     go to state 57
    simple_expression  go to state 58
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61
    argument_list      go to state 92
    arguments          go to state 93


State 70

   38 variable: ID LTHIRD . expression RTHIRD

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable           go to state 54
    expression         go to state 94
    logic_expression   go to state 56
    rel_expression     go to state 57
    simple_expression  go to state 58
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61


State 71

   52 factor: variable .
   57       | variable . INCOP
   58       | variable . DECOP

    INCOP  shift, and go to state 78
    DECOP  shift, and go to state 79

    $default  reduce using rule 52 (factor)


State 72

   49 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 49 (unary_expression)


State 73

   50 unary_expression: NOT unary_expression .

    $default  reduce using rule 50 (unary_expression)


State 74

   54 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 95


State 75

   22 declaration_list: ID .
   23                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 22 (declaration_list)


State 76

   14 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 14 (compound_statement)


State 77

   25 statements: statements statement .

    $default  reduce using rule 25 (statements)


State 78

   57 factor: variable INCOP .

    $default  reduce using rule 57 (factor)


State 79

   58 factor: variable DECOP .

    $default  reduce using rule 58 (factor)


State 80

   40 expression: variable ASSIGNOP . logic_expression

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable           go to state 71
    logic_expression   go to state 96
    rel_expression     go to state 57
    simple_expression  go to state 58
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61


State 81

   36 expression_statement: expression SEMICOLON .

    $default  reduce using rule 36 (expression_statement)


State 82

   42 logic_expression: rel_expression LOGICOP . rel_expression

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable           go to state 71
    rel_expression     go to state 97
    simple_expression  go to state 58
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61


State 83

   46 simple_expression: simple_expression ADDOP . term

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable          go to state 71
    term              go to state 98
    unary_expression  go to state 60
    factor            go to state 61


State 84

   44 rel_expression: simple_expression RELOP . simple_expression

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable           go to state 71
    simple_expression  go to state 99
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61


State 85

   48 term: term MULOP . unary_expression

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable          go to state 71
    unary_expression  go to state 100
    factor            go to state 61


State 86

   30 statement: IF lparen2 expression . RPAREN statement
   31          | IF lparen2 expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 101


State 87

   29 statement: FOR lparen2 expression_statement . expression_statement expression RPAREN statement

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    SEMICOLON    shift, and go to state 45
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    expression_statement  go to state 102
    variable              go to state 54
    expression            go to state 55
    logic_expression      go to state 56
    rel_expression        go to state 57
    simple_expression     go to state 58
    term                  go to state 59
    unary_expression      go to state 60
    factor                go to state 61


State 88

   32 statement: WHILE lparen2 expression . RPAREN statement

    RPAREN  shift, and go to state 103


State 89

   34 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 34 (statement)


State 90

   33 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 104


State 91

   62 arguments: logic_expression .

    $default  reduce using rule 62 (arguments)


State 92

   53 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 105


State 93

   59 argument_list: arguments .
   61 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 106

    $default  reduce using rule 59 (argument_list)


State 94

   38 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 107


State 95

   54 factor: LPAREN expression RPAREN .

    $default  reduce using rule 54 (factor)


State 96

   40 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 40 (expression)


State 97

   42 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 42 (logic_expression)


State 98

   46 simple_expression: simple_expression ADDOP term .
   48 term: term . MULOP unary_expression

    MULOP  shift, and go to state 85

    $default  reduce using rule 46 (simple_expression)


State 99

   44 rel_expression: simple_expression RELOP simple_expression .
   46 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 83

    $default  reduce using rule 44 (rel_expression)


State 100

   48 term: term MULOP unary_expression .

    $default  reduce using rule 48 (term)


State 101

   30 statement: IF lparen2 expression RPAREN . statement
   31          | IF lparen2 expression RPAREN . statement ELSE statement

    IF           shift, and go to state 35
    FOR          shift, and go to state 36
    INT          shift, and go to state 1
    WHILE        shift, and go to state 37
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 38
    PRINTLN      shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 45
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 50
    statement             go to state 108
    expression_statement  go to state 53
    variable              go to state 54
    expression            go to state 55
    logic_expression      go to state 56
    rel_expression        go to state 57
    simple_expression     go to state 58
    term                  go to state 59
    unary_expression      go to state 60
    factor                go to state 61


State 102

   29 statement: FOR lparen2 expression_statement expression_statement . expression RPAREN statement

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable           go to state 54
    expression         go to state 109
    logic_expression   go to state 56
    rel_expression     go to state 57
    simple_expression  go to state 58
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61


State 103

   32 statement: WHILE lparen2 expression RPAREN . statement

    IF           shift, and go to state 35
    FOR          shift, and go to state 36
    INT          shift, and go to state 1
    WHILE        shift, and go to state 37
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 38
    PRINTLN      shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 45
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 50
    statement             go to state 110
    expression_statement  go to state 53
    variable              go to state 54
    expression            go to state 55
    logic_expression      go to state 56
    rel_expression        go to state 57
    simple_expression     go to state 58
    term                  go to state 59
    unary_expression      go to state 60
    factor                go to state 61


State 104

   33 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 111


State 105

   53 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 53 (factor)


State 106

   61 arguments: arguments COMMA . logic_expression

    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    variable           go to state 71
    logic_expression   go to state 112
    rel_expression     go to state 57
    simple_expression  go to state 58
    term               go to state 59
    unary_expression   go to state 60
    factor             go to state 61


State 107

   38 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 38 (variable)


State 108

   30 statement: IF lparen2 expression RPAREN statement .
   31          | IF lparen2 expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 113

    $default  reduce using rule 30 (statement)


State 109

   29 statement: FOR lparen2 expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 114


State 110

   32 statement: WHILE lparen2 expression RPAREN statement .

    $default  reduce using rule 32 (statement)


State 111

   33 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 33 (statement)


State 112

   61 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 61 (arguments)


State 113

   31 statement: IF lparen2 expression RPAREN statement ELSE . statement

    IF           shift, and go to state 35
    FOR          shift, and go to state 36
    INT          shift, and go to state 1
    WHILE        shift, and go to state 37
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 38
    PRINTLN      shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 45
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 50
    statement             go to state 115
    expression_statement  go to state 53
    variable              go to state 54
    expression            go to state 55
    logic_expression      go to state 56
    rel_expression        go to state 57
    simple_expression     go to state 58
    term                  go to state 59
    unary_expression      go to state 60
    factor                go to state 61


State 114

   29 statement: FOR lparen2 expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 35
    FOR          shift, and go to state 36
    INT          shift, and go to state 1
    WHILE        shift, and go to state 37
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 38
    PRINTLN      shift, and go to state 39
    ID           shift, and go to state 40
    ADDOP        shift, and go to state 41
    NOT          shift, and go to state 42
    LPAREN       shift, and go to state 43
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 45
    CONST_INT    shift, and go to state 46
    CONST_FLOAT  shift, and go to state 47

    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 50
    statement             go to state 116
    expression_statement  go to state 53
    variable              go to state 54
    expression            go to state 55
    logic_expression      go to state 56
    rel_expression        go to state 57
    simple_expression     go to state 58
    term                  go to state 59
    unary_expression      go to state 60
    factor                go to state 61


State 115

   31 statement: IF lparen2 expression RPAREN statement ELSE statement .

    $default  reduce using rule 31 (statement)


State 116

   29 statement: FOR lparen2 expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 29 (statement)
